[gd_scene load_steps=10 format=2]

[ext_resource path="res://Styles/UI/PalettonTheme/ButtonHover.tres" type="StyleBox" id=1]
[ext_resource path="res://Scripts/UI/QueueButton.gd" type="Script" id=2]
[ext_resource path="res://Styles/UI/PalettonTheme/ButtonPressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Styles/UI/PalettonTheme/ButtonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Art/Units/imperium/techpriest/icon.png" type="Texture" id=5]
[ext_resource path="res://Fonts/SourceHanSerifSC-Regular.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.65098, 0.65098, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )

[node name="QueueButton" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1880.0
margin_bottom = -1040.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.811765, 1, 1 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thumbnail" type="Sprite" parent="Button"]
texture = ExtResource( 5 )
centered = false
offset = Vector2( 4, 4 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 4.0
margin_top = 34.8486
margin_right = 36.0
margin_bottom = 36.8486
mouse_filter = 2
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
